[package]
name = "tombi-diagnostic"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nu-ansi-term.workspace = true
serde.workspace = true
tombi-text.workspace = true
tower-lsp = { workspace = true, optional = true }

[dev-dependencies]
clap.workspace = true
clap-verbosity-flag.workspace = true
tracing-subscriber.workspace = true

[features]
default = ["lsp"]
lsp = ["dep:tower-lsp"]
