[package]
name = "tombi-linter"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
itertools.workspace = true
thiserror.workspace = true
tombi-ast.workspace = true
tombi-config.workspace = true
tombi-diagnostic.workspace = true
tombi-document-tree.workspace = true
tombi-parser.workspace = true
tombi-schema-store.workspace = true
tombi-text.workspace = true
tombi-validator.workspace = true
url.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tokio = { workspace = true, features = ["macros"] }
tombi-test-lib.workspace = true
