[package]
name = "tombi-text"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tower-lsp = { workspace = true, optional = true }
tracing.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
rstest.workspace = true

[features]
default = ["lsp"]
lsp = ["dep:tower-lsp"]
serde = []
